# d3velop

./: .gitignore  CMakeLists.txt  compile_commands.json  download.html  imgui.ini  index.html  pom.xml  todo.txt  vcpkg.json  xmake.lua
.github/workflows/: static.yml
.zed/: tasks.json
src/: D3velop.cpp  D3velop.h  Params.h  d3vips.cpp  d3vips.h  framebuffer.cpp  framebuffer.h  gl.cpp  gl.h  gui.cpp  gui.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  util.h
src/main/java/: module-info.java
src/main/java/com/d3dev/: App.java  ColorTransformer.java  Controller.java  Dc.java  Developer.java  ImageTransformer.java  Image_Model.java  Model.java  State.java  View_Controller.java  props_.java
src/main/java/com/d3dev/Utils/: CMS.java  Developer.java  Image.java  SwingFXUtils.java  img_transformer.java
src/main/java/com/d3dev/Views/: Image_View.java  Main_Window.java  Sidebar_View.java  Toolbar_View.java
src/main/java/com/d3velop/: Controller.java  Main.java  NFD.java  Native.java
src/main/java/com/d3velop/GL/: GLUtils.java
src/main/java/com/d3velop/Renderer/: FrameBuffer.java  Renderer.java  Texture.java
src/main/java/com/d3velop/Shader_src/: edit.frag  exposure.frag  image.frag  image.vert  levels.frag
src/main/java/com/d3velop/Shaders/: S_Edit.java  S_General.java  S_Image.java  S_Levels.java  Shader.java
src/main/java/com/d3velop/Window/: W_Crash.java  W_Dev.java  W_Edit.java  W_ImageView.java  W_Loading.java  W_Log.java  (+1 more)
src/main/resources/com/d3dev/: primary.fxml
src/shaders/: image.glsl  shader_util.h  testshader.glsl
